refactor(challenge): 자잘 수정